// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pipeline reducer test cases should handle PROJECT_PIPELINE_GRID_DETAILS  1`] = `
Object {
  "data": Array [
    Object {
      "approxValue": 0,
      "cdmNotifiable": false,
      "commenceDate": "",
      "contractTypeDescription": "",
      "contractTypeId": 0,
      "contractorId": "-1",
      "headOfProject": "",
      "lastModified": "",
      "name": "",
      "probabilityOfWinning": 1,
      "projectId": "",
      "projectOwner": "",
      "projectRefId": 0,
      "projectStatusDescription": "",
      "soldMargin": "",
      "status": "",
      "weightedTCV": "",
    },
  ],
  "error": null,
  "loading": false,
  "pipelineDetails": Object {
    "data": Array [
      Object {
        "approxValue": 0,
        "cdmNotifiable": false,
        "commenceDate": "",
        "contractTypeDescription": "",
        "contractTypeId": 0,
        "contractorId": "-1",
        "headOfProject": "",
        "lastModified": "",
        "name": "",
        "probabilityOfWinning": 1,
        "projectId": "",
        "projectOwner": "",
        "projectRefId": 0,
        "projectStatusDescription": "",
        "soldMargin": "",
        "status": "",
        "weightedTCV": "",
      },
    ],
    "error": null,
    "loading": false,
    "projectChartSummary": Object {
      "data": Array [],
      "error": null,
      "loading": false,
    },
    "totalNumberOfRecord": 1,
  },
  "projectChartSummary": Object {
    "data": Array [],
    "error": null,
    "loading": false,
  },
  "totalNumberOfRecord": 1,
}
`;

exports[`Pipeline reducer test cases should handle PROJECT_PIPELINE_GRID_ERROR  1`] = `
Object {
  "data": Array [
    Object {
      "approxValue": 0,
      "cdmNotifiable": false,
      "commenceDate": "",
      "contractTypeDescription": "",
      "contractTypeId": 0,
      "contractorId": "-1",
      "headOfProject": "",
      "lastModified": "",
      "name": "",
      "probabilityOfWinning": 1,
      "projectId": "",
      "projectOwner": "",
      "projectRefId": 0,
      "projectStatusDescription": "",
      "soldMargin": "",
      "status": "",
      "weightedTCV": "",
    },
  ],
  "error": undefined,
  "loading": false,
  "notify": 2,
  "pipelineDetails": Array [],
  "projectChartSummary": Object {
    "data": Array [],
    "error": null,
    "loading": false,
  },
  "totalNumberOfRecord": 0,
}
`;
